# MarsCell

./: .gitignore  .readthedocs.yaml  Julien  Julien.pub  LICENSE  MarCell_data.yaml  README.md  analysis.ipynb  functions_script.py  gui.py  gui2.py  plots_paper copy.ipynb  plotting_functions.py  pyproject.toml  requirements.txt  setup.py
MarCell/: analysis.ipynb  functions_script.py  matching.py  plots_paper.ipynb
MarCell.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Notebooks/: analysis.ipynb  plots_paper_copy.ipynb  plotting_functions.py  yaml_creation.py
Scripts_TAPAS/: 02b_tapas-drawroi.txt  runCellpose2D-reelin.bat
TAPAS_scripts/: 01_tapas-preprocess-reelin-PFC.txt  02a_tapas-cellpose-reelin.txt  02a_tapas-cellpose.txt  02b_tapas-drawroi.txt  all_measures_local.txt
TAPAS_scripts/cellpose_model/: parametersCellpose.txt
docs/: conf.py
src/: MarCell_data.yaml
src/MarCell/: MarCell_data.yaml  __init__.py  functions_script.py  gui.py  utils.py
src/MarsCell/: MarCell_data.yaml  __init__.py  functions_script.py  gui.py  utils copy.py  utils.py  utils_deprec.py
src/MarsCell/TAPAS_installation/tapas/: tapas.tpm  tapasDocumentation.txt
src/MarsCell/data/: 01_tapas-preprocess.txt  02a_tapas-cellpose.txt  all_measures_local.txt  created.yaml  delete_oldcellpose.bat  runCellpose.bat  runCellpose2D-reelin-2023bat.bat  subprocess.txt
