[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MarsCell"
version = "0.1"
license = {file = "LICENSE"}
description = "An AI-based workflow for automated cell detection and quantification on confocal images"
authors = [{ name = "Julien Ferragu", email = "julien.ferragu@inserm.fr" }]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
  'pandas==1.5.3',
    'numpy==1.23.5',
    'seaborn==0.12.2',
    'statannotations==0.7.1',
    'matplotlib==3.7.2',
    'plotly==5.18.0',
    'scipy==1.10.1',
    'cellpose==2.1.1',
    'PyYAML==6.0.1',
    'requests==2.32.3',
    'shap==0.46.0',
    'scikit-learn==1.5.2']

[project.scripts]
gui = "MarsCell:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"MarsCell.data" = ["*.txt", "*.bat","Reelin_P40_advanced"]
