[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MarsCell"
version = "0.1"
license = {file = "LICENSE"}
description = "An AI-based workflow for automated cell detection and quantification on confocal images"
authors = [{ name = "Julien Ferragu", email = "julien.ferragu@inserm.fr" }]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
  'pandas==2.1.4',
'numpy==1.26.2',
'seaborn==0.13.0',
'statannotations==0.5.0',
'matplotlib==3.8.2',
'plotly==5.18.0',
'scipy==1.11.4',
'cellpose==2.3.0',
'PyYAML==6.0.1',
'requests==2.33.0',
'shap==0.44.0',
'scikit-learn==1.6.1']

[project.scripts]
gui = "MarsCell:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"MarsCell.data" = ["*.txt", "*.bat","Reelin_P40_advanced"]
